# NYgrid-python

./: .gitignore  .readthedocs.yaml  LICENSE  NYgrid-power.yml  NYgrid-python.yml  README.md  pyproject.toml  requirements.txt  setup.py
NYgrid-python/: opf.py
data/: dirpaths_2018Base.yml  genInfo_old.csv  ny_grid.mat  ny_grid_copy.mat  ny_grid_old.mat
dev/: calc_gen_params.ipynb  gen_params.py  load2bus.ipynb  multiperiod_opf_from_csv.ipynb  multiperiod_opf_new.ipynb  multiperiod_opf_new_with_renewable.ipynb  nygrid_2_pras.ipynb  opf.py  renewable_allocation.ipynb  single_period_opf.ipynb  write_gen_prop_profiles.ipynb
examples/: .ex_opf_w_renew.py.swp  .ex_opf_wo_renew.py.swp  01_opf_2018Baseline.py  01_opf_2018Baseline_daily.py  01_opf_2018Baseline_yearly.py  01_opf_2018NewParams_daily.py  01_opf_2018NewParams_restart.py  01_opf_baseline.py  021_opf_2030BaselineCase_NoLargeLoad_daily.py  02_opf_2030BaselineCase_daily.py  02_opf_2030CLCPA.py  02_opf_2030CLCPA_daily.py  02_opf_2030CLCPA_yearly.py  02_opf_w_esr.py  031_opf_2030ContractCase_NoLargeLoad_daily.py  03_opf_2030ContractCase_daily.py  03_opf_w_cpny.py  041_opf_2030StateScenario_FewerESR_daily.py  042_opf_2030StateScenario_FewerOSW_daily.py  043_opf_2030StateScenario_NoCHPE_daily.py  044_opf_2030StateScenario_NoTxUpgrade_daily.py  045_opf_2030StateScenario_NoLargeLoad_daily.py  046_opf_2030StateScenario_AvgRenew_daily.py  04_opf_2030StateScenario_daily.py  04_opf_w_esr_cpny.py  05_opf_w_vre.py  06_opf_w_vre_esr.py  07_opf_w_vre_cpny.py  08_opf_w_vre_esr_cpny.py  09_opf_w_elec_vre.py  10_opf_w_elec_vre_esr.py  (+54 more)
(+121 files in other folders)
